--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ flask-sqlalchemy = "*"
 flask-migrate = "*"
 sqlalchemy-serializer = "*"
 flask-restful = "*"
+boto3 = "*"
+awscli = "*"
 
 [dev-packages]
 
