--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "yup": "^1.1.1"
   },
   "scripts": {
-    "start": "PORT=4000 react-scripts start"
+    "start": "PORT=4000 react-scripts start",
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
